name:           echonest-fun
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Max

executable echonest-fun
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   network,
                   http-conduit,
                   conduit,
                   text,
                   aeson
  ghc-options:     -Wall
  extensions:      OverloadedStrings
  other-modules:   EchonestResponse

